8/9/08 - Defaulting class name to controller name. [Kevin Smith]

8/8/08 - Initial import. [Matthew Bass]