@@ -1,3 +1,7 @@
+8/15/08 - Support for nested resources. [Matthew Bass]
+
+8/14/08 - Optional before filter prepending. [Steve Mohapi-Banks]
+
 8/9/08 - Defaulting class name to controller name. [Kevin Smith]
 
 8/8/08 - Initial import. [Matthew Bass]
